apps/khuedoan/blog/production/namespace-khuedoan-blog-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: khuedoan-blog-production
