apps/khuedoan/blog/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: khuedoan-blog-production
  labels:
    istio.io/dataplane-mode: ambient
