apps/khuedoan/blog/production/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    netamos.com/branch: master
    netamos.com/repository: khuedoan/blog
    netamos.com/source: git
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: blog
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: blog
  name: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: blog
  template:
    metadata:
      annotations:
        netamos.com/branch: master
        netamos.com/repository: khuedoan/blog
        netamos.com/source: git
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: blog
        app.kubernetes.io/managed-by: netamos
        app.kubernetes.io/name: blog
    spec:
      containers:
      - image: registry.registry.svc.cluster.local/apps/khuedoan/blog:3186aa0cc22649ce1dd897f80c1ac10e50d7e3af
        name: blog
        ports:
        - containerPort: 3000
          name: http
