apps/khuedoan/blog/production/deployment-blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: khuedoan-blog-production
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: blog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blog
        istio.io/dataplane-mode: ambient
    spec:
      containers:
      - image: registry.registry.svc.cluster.local/khuedoan/blog:b1e6bb730ce8193e10a6981d59e509132cfaa749
        name: blog
        ports:
        - containerPort: 3000
          name: http
