apps/khuedoan/blog/production/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: blog
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: blog
  name: blog
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/instance: blog
