apps/khuedoan/blog/production/service-blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: khuedoan-blog-production
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/name: blog
