apps/khuedoan/blog/production/blog-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: blog
    app.kubernetes.io/managed-by: netamos
    app.kubernetes.io/name: blog
spec:
  hostnames:
  - www.khuedoan.com
  - www.production.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: blog
      port: 3000
