apps/khuedoan/blog/production/httproute-blog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
spec:
  hostnames:
  - www.khuedoan.com
  - www.production.khuedoan.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: blog
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
